--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ https://www.jobstreet.com.my/en/job-search/laravel-jobs-in-kuala-lumpur/3/?salar
             <div class="home-buttons">
             
             <!--<a href="" target="_blank" id="" class="btn btn-primary">Download CV</a> -->
-            <a href="#contact"  class="btn btn-secondary">Contact</a> </div>
+            <a href="#contact"  class="btn btn-secondary">Contact Me</a> </div>
           </div>
         </div>
       </div>
