--- a/portfolio_graphic.html
+++ b/portfolio_graphic.html
@@ -24,6 +24,9 @@
 </header>
 <main>
   <div class="owl-carousel owl-theme  ez-animate " data-animation="fadeIn" >
+    <div class="item "> <img src="img/portfolio/graphic_11.png" > <small>social media post design | Illustrator & Photoshop</small> </div>
+    <div class="item "> <img src="img/portfolio/graphic_10.png" > <small>banner design | Illustrator & Photoshop</small> </div>
+    <div class="item "> <img src="img/portfolio/graphic_09.png" > <small>catalog /flyer design | Illustrator & Photoshop</small> </div>
     <div class="item "> <img src="img/portfolio/graphic_01.png" > <small>banner design | Illustrator & Photoshop</small> </div>
     <div class="item"> <img src="img/portfolio/graphic_02.png" > <small>Catalog desgin | Illustrator & Photoshop</small> </div>
     <div class="item"> <img src="img/portfolio/graphic_03.png" > <small>Comapany profile design | Illustrator & Photoshop</small> </div>
