--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ https://www.jobstreet.com.my/en/job-search/laravel-jobs-in-kuala-lumpur/3/?salar
             <a href="portfolio_graphic.html">
             <img src="img/portfolio/icon_design.svg"  class="img-fluid">
             <div class=" p-2">
-            <p class="text-dark">Graphic</p>
+            <p class="text-dark">Graphic / Social Media</p>
             </div>
 			</a>
             </div>
